# docs/swagger.yaml
@@ -79,7 +79,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /login:
+  /api/login:
     post:
       consumes:
       - application/json
@@ -101,7 +101,7 @@ paths:
       summary: 用户登录接口
       tags:
       - 用户登录相关接口
-  /signadd:
+  /api/signadd:
     post:
       consumes:
       - application/json
@@ -123,7 +123,7 @@ paths:
       summary: 用户注册接口
       tags:
       - 用户注册接口
-  /signdel:
+  /api/signdel:
     post:
       consumes:
       - application/json
@@ -151,7 +151,7 @@ paths:
       summary: 用户删除接口
       tags:
       - 用户删除接口
-  /signone:
+  /api/signone:
     post:
       consumes:
       - application/json
